--- a/olibrary/views/author.xml
+++ b/olibrary/views/author.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-        <record id="lib_author_tree" model="ir.ui.view">
-            <field name="name">lib.author.tree ()</field>
-            <field name="model">lib.author</field>
+        <record id="olib_author_tree" model="ir.ui.view">
+            <field name="name">olib.author.tree ()</field>
+            <field name="model">olib.author</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
                 </tree>
             </field>
         </record>
-        <record id="lib_author_form" model="ir.ui.view">
-            <field name="name">lib.author.form ()</field>
-            <field name="model">lib.author</field>
+        <record id="olib_author_form" model="ir.ui.view">
+            <field name="name">olib.author.form ()</field>
+            <field name="model">olib.author</field>
             <field name="arch" type="xml">
                 <form>
                     <header></header>
@@ -23,14 +23,14 @@
                 </form>
             </field>
         </record>
-        <record id="lib_author_act_window" model="ir.actions.act_window">
+        <record id="olib_author_act_window" model="ir.actions.act_window">
             <field name="name">Author</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">lib.author</field>
+            <field name="res_model">olib.author</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <menuitem id="lib_author_menu"
-                  action="lib_author_act_window"
-                  parent="lib_catalog_menu"
+        <menuitem id="olib_author_menu"
+                  action="olib_author_act_window"
+                  parent="olib_catalog_menu"
                   name="Authors" sequence="400"/>
 </odoo>
